# ROS-based-USV-project

./: CMakeLists.txt  LICENSE  README.md  install.sh  install_service.sh  package.xml  package_project.sh  test_system.sh
action/: NavigateToWaypoint.action
config/: usv_config.yaml
launch/: test_launch.launch.py  usv_control.launch.py
main_sequence/: CMakeLists.txt  LatLong.txt  README.md  package.xml
main_sequence/action/: uas_navigation.action
main_sequence/launch/: main_sequence.launch
main_sequence/msg/: attitude.msg  route.msg
main_sequence/scripts/: .readData_IWR1443.py.swp  constant_params.py  control_mode_hub.py  eastar_protocol.py  navigation_action_server.py  navigation_action_server.py.save  readData_IWR1443.py  serial_port_hub.py  variable.py
scripts/: constant_params.py  control_mode_hub.py  navigation_action_server.py  radar_data_processor.py  serial_port_hub.py  usv_controller.py
systemd/: usv-control.service
